# roloi-polkadot-w3f-grant

./: .gitignore  Cargo.toml  README.md  errors.rs  lib.rs  roloi.md  stream.rs  utils.rs
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/hash/: trait.Hash.js
doc/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/implementors/ink_lang/contract_ref/: trait.ToAccountId.js
doc/implementors/scale_info/: trait.TypeInfo.js
doc/src/streams_contract/: errors.rs.html  lib.rs.html  stream.rs.html  utils.rs.html
doc/streams_contract/: all.html  index.html  sidebar-items.js
doc/streams_contract/errors/: enum.ContractError.html  index.html
doc/streams_contract/stream/: constant.STREAM_MINIMUM_DURATION.html  index.html  sidebar-items.js  struct.Stream.html
doc/streams_contract/streams_contract/: index.html  sidebar-items.js  struct.StreamsContract.html  struct.StreamsContractRef.html  type.AccountId.html  type.Balance.html  type.BlockNumber.html  type.Environment.html  type.Hash.html  type.Timestamp.html
doc/streams_contract/utils/: fn.get_current_time_in_seconds.html  fn.validate_and_generate_stream_end_date.html  fn.validate_stream_creation_parameters.html  fn.validate_stream_duration.html  fn.validate_stream_end_date.html  index.html  sidebar-items.js
(+25 files in other folders)
