[package]
name = "streams_contract"
version = "0.1.0"
authors = ["Roloi <contact@roloi.money>"]
edition = "2021"

[dependencies]
ink_primitives = { tag = "v3.3.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { tag = "v3.3.0", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { tag = "v3.3.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { tag = "v3.3.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { tag = "v3.3.0", git = "https://github.com/paritytech/ink", default-features = false }
scale = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"], optional = true }
chrono = { version = "0.4.19" }

[lib]
name = "streams_contract"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false
